# hikeguard-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  config.py  pyproject.toml  spam_replies.py  utils.py
db/: database.py  queries.py
docs/: generate_guide_pdf.py
docs/superpowers/plans/: 2026-05-12-join-request-gate.md
middlewares/: throttle.py
routers/: admin.py  join_request.py  media.py  new_member.py  purge.py  text.py
services/: cas.py  gemini.py  join_scorer.py  keyword_scorer.py  moderation.py  spam_detector.py  velocity_tracker.py
tests/: test_join_scorer.py  test_velocity_tracker.py
